@@ -1,3 +1,4 @@
+* Add supplier and delivery address on supplier return shipment
 * Add Python3 support
 * Add do button on stock move form & list
 * Add warehouse address on internal shipment
